--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "enon",
+  "name": "next-tailwind-amazona",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,25 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.4",
+    "@headlessui/react": "^1.6.2",
     "@heroicons/react": "^1.0.6",
-    "axios": "^1.2.0",
+    "@paypal/react-paypal-js": "^7.8.2",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.8.0",
+    "cloudinary": "^1.30.0",
     "js-cookie": "^3.0.1",
-    "mongoose": "^6.6.1",
-    "next": "12.2.5",
-    "next-auth": "^4.10.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.35.0",
-    "react-toastify": "^9.0.8"
+    "mongoose": "^6.3.4",
+    "next": "12.1.5",
+    "next-auth": "^4.3.4",
+    "react": "18.0.0",
+    "react-chartjs-2": "^4.2.0",
+    "react-dom": "18.0.0",
+    "react-hook-form": "^7.31.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "@types/react": "^18.0.8",
+    "autoprefixer": "^10.4.5",
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   }
 }
