--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGODB_URI=mongodb+srv://admin:admin@enon.baoxclg.mongodb.net/tes?retryWrites=true&w=majority
 
 NEXTAUTH_URL= http://localhost:3000
-NEXTAUTH_SECRET=somethingsecret
+NEXTAUTH_SECRET=enigma
 PAYPAL_CLIENT_ID = AblIvt3SwqbwvvfbpDaxkcO5nol98-l9q7o1xJFXy8E7iae_mC2cHCajlLbWih8WXm_v4UXUkJxfKlGZ
