--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ MONGODB_URI=mongodb+srv://admin:admin@enon.baoxclg.mongodb.net/tes?retryWrites=t
 NEXTAUTH_URL= http://localhost:3000
 NEXTAUTH_SECRET=enigma
 PAYPAL_CLIENT_ID = AblIvt3SwqbwvvfbpDaxkcO5nol98-l9q7o1xJFXy8E7iae_mC2cHCajlLbWih8WXm_v4UXUkJxfKlGZ
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dgizvtgco
+NEXT_PUBLIC_CLOUDINARY_API_KEY=554467117589996
+CLOUDINARY_SECRET=dy4Ks6vcIkPqM1UWzoqQNidVZR0
