--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ PAYPAL_CLIENT_ID = AblIvt3SwqbwvvfbpDaxkcO5nol98-l9q7o1xJFXy8E7iae_mC2cHCajlLbWi
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dgizvtgco
 NEXT_PUBLIC_CLOUDINARY_API_KEY=554467117589996
 CLOUDINARY_SECRET=dy4Ks6vcIkPqM1UWzoqQNidVZR0
+CLOUDINARY_URL=cloudinary://554467117589996:dy4Ks6vcIkPqM1UWzoqQNidVZR0@dgizvtgco
